# distributedhardware_distributed_input

./: OAT.xml  README.md  README_zh.md  bundle.json  distributedinput.gni  hisysevent.yaml
common/include/: constants_dinput.h  dinput_errcode.h  dinput_hitrace.h  dinput_sa_process_state.cpp  dinput_sa_process_state.h  dinput_struct_data.cpp  dinput_struct_data.h  idinput_dbg_itf.h  input_check_param.cpp  input_check_param.h  input_hub.cpp  input_hub.h  white_list_util.cpp  white_list_util.h
common/include/test/whitelistunittest/: BUILD.gn  white_list_test.cpp  white_list_test.h
common/mock/: session_mock.cpp  session_mock.h  softbus_bus_center_mock.h
dfx_utils/: BUILD.gn
dfx_utils/include/: hidumper.h  hisysevent_util.h
dfx_utils/src/: hidumper.cpp  hisysevent_util.cpp
dfx_utils/test/: BUILD.gn
dfx_utils/test/dfxtest/: BUILD.gn  distributed_input_dfx_test.cpp  distributed_input_dfx_test.h
frameworks/include/: i_add_white_list_infos_call_back.h  i_del_white_list_infos_call_back.h  (+16 more)
inputdevicehandler/: BUILD.gn
inputdevicehandler/include/: distributed_input_handler.h
inputdevicehandler/src/: distributed_input_handler.cpp
inputdevicehandler/test/: BUILD.gn
inputdevicehandler/test/inputhandlertest/: BUILD.gn  distributed_input_handler_test.cpp  distributed_input_handler_test.h
interfaces/ipc/test/unpreparedinputcallbackunittest/: BUILD.gn  unprepare_d_input_call_back_test.cpp  unprepare_d_input_call_back_test.h
low_latency/: BUILD.gn
sa_profile/: 4809.xml  4810.xml  BUILD.gn  dinput.cfg
services/sink/inputcollector/: BUILD.gn
services/sink/inputcollector/include/: distributed_input_collector.h
services/sink/inputcollector/src/: distributed_input_collector.cpp
services/sink/inputcollector/test/: BUILD.gn
services/sink/inputcollector/test/sinkcollectorunittest/: BUILD.gn  distributed_input_collector_test.cpp  distributed_input_collector_test.h
services/sink/sinkmanager/: BUILD.gn
services/sink/sinkmanager/include/: distributed_input_sink_event_handler.h  distributed_input_sink_manager.h
services/sink/sinkmanager/src/: distributed_input_sink_event_handler.cpp  distributed_input_sink_manager.cpp
services/sink/sinkmanager/test/: BUILD.gn
services/sink/sinkmanager/test/sinkmanagerunittest/: BUILD.gn  distributed_input_sinkmanager_test.cpp  distributed_input_sinkmanager_test.h
services/sink/sinkmanager/test/sinkmanagerunittest/mock/: mock_process.cpp  mock_process.h
services/sink/transport/: BUILD.gn
services/sink/transport/include/: distributed_input_sink_switch.h  distributed_input_sink_transport.h
services/sink/transport/src/: distributed_input_sink_switch.cpp  distributed_input_sink_transport.cpp
services/sink/transport/test/: BUILD.gn
services/sink/transport/test/sinktransunittest/: BUILD.gn  distributed_input_sinktrans_test.cpp  distributed_input_sinktrans_test.h
services/sink/transport/test/sinktransunittest/mock/: softbus_bus_center.h
services/source/inputinject/: BUILD.gn
services/source/inputinject/include/: distributed_input_inject.h  distributed_input_node_manager.h  virtual_device.h  virtual_keyboard.h  virtual_mouse.h  virtual_touchpad.h  virtual_touchscreen.h
services/source/inputinject/src/: distributed_input_inject.cpp  distributed_input_node_manager.cpp  virtual_device.cpp  virtual_keyboard.cpp  virtual_mouse.cpp  virtual_touchpad.cpp  virtual_touchscreen.cpp
services/source/inputinject/test/: BUILD.gn
services/source/inputinject/test/sourceinjectunittest/: BUILD.gn  distributed_input_sourceinject_test.cpp  distributed_input_sourceinject_test.h
services/source/sourcemanager/: BUILD.gn
services/source/sourcemanager/include/: distributed_input_source_event_handler.h  distributed_input_source_manager.h  distributed_input_source_sa_cli_mgr.h
services/source/sourcemanager/src/: distributed_input_source_event_handler.cpp  distributed_input_source_manager.cpp  distributed_input_source_sa_cli_mgr.cpp
services/source/sourcemanager/test/: BUILD.gn
services/source/sourcemanager/test/sourcemanagerunittest/: BUILD.gn  distributed_input_sourcemanager_test.cpp  distributed_input_sourcemanager_test.h
services/source/transport/: BUILD.gn
services/source/transport/include/: distributed_input_source_transport.h
services/source/transport/src/: distributed_input_source_transport.cpp
services/source/transport/test/: BUILD.gn
services/source/transport/test/sourcetransunittest/: BUILD.gn  distributed_input_sourcetrans_test.cpp  distributed_input_sourcetrans_test.h
services/source/transport/test/sourcetransunittest/mock/: session.h  softbus_bus_center.h  softbus_common.h
services/transportbase/: BUILD.gn
services/transportbase/include/: distributed_input_transport_base.h
services/transportbase/src/: distributed_input_transport_base.cpp
services/transportbase/test/: BUILD.gn
services/transportbase/test/transbaseunittest/: BUILD.gn  distributed_input_transbase_test.cpp  distributed_input_transbase_test.h
sinkhandler/: BUILD.gn
sourcehandler/: BUILD.gn
sourcehandler/test/unittest/: BUILD.gn  distributed_input_sourcehandler_test.cpp  distributed_input_sourcehandler_test.h
sourcehandler/test/unittest/mock/: mock_distributed_input_client.cpp
test/: BUILD.gn
test/fuzztest/distributedinputkit_fuzzer/: BUILD.gn  distributed_input_kit_fuzzer.cpp  distributed_input_kit_fuzzer.h
test/fuzztest/distributedinputsinktransport_fuzzer/: BUILD.gn  distributed_input_sink_transport_fuzzer.cpp  distributed_input_sink_transport_fuzzer.h
test/fuzztest/distributedinputsourcetransport_fuzzer/: BUILD.gn  distributed_input_source_transport_fuzzer.cpp  distributed_input_source_transport_fuzzer.h
test/system/: BUILD.gn
test/system/include/: distributed_input_test.h
test/system/src/: distributed_input_test.cpp
utils/: BUILD.gn
utils/include/: dinput_context.h  dinput_low_latency_utils.h  dinput_utils_tool.h
utils/src/: dinput_context.cpp  dinput_low_latency_utils.cpp  dinput_sa_process_state.cpp  dinput_utils_tool.cpp
utils/test/unittest/: BUILD.gn  dinput_context_test.cpp  dinput_context_test.h
(+131 files in other folders)
