# Copyright (c) 2021-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/distributedhardware/distributed_input/distributedinput.gni")

ohos_shared_library("libdinput_handler") {
  include_dirs = [
    "include",
    "${common_path}/include",
    "//utils/native/base/include",
    "//utils/system/safwk/native/include",
    "${fwk_common_path}/log/include",
    "${fwk_common_path}/utils/include",
    "${fwk_utils_path}/include/log",
    "${fwk_utils_path}/include",
    "${frameworks_path}/include",
    "//third_party/json/include",
  ]

  sources = [
    "src/distributed_input_handler.cpp",
    "${common_path}/include/input_hub.cpp",
  ]

  defines = [
    "HI_LOG_ENABLE",
    "DH_LOG_TAG=\"distributedinputhandler\"",
    "LOG_DOMAIN=0xD004100",
  ]

  deps = [
    "//foundation/bundlemanager/bundle_framework/interfaces/innerkits/libeventhandler:libeventhandler",
    "//utils/native/base:utils",
    "${fwk_utils_path}:distributedhardwareutils",
    "//third_party/openssl:libcrypto_static",
  ]

  external_deps = [
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "hiviewdfx_hilog_native:libhilog",
    "samgr_standard:samgr_proxy",
    "dsoftbus_standard:softbus_client",
  ]

  cflags_cc = [ "-DHILOG_ENABLE" ]

  subsystem_name = "distributedhardware"

  part_name = "distributed_input"

}
