# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import(
    "//foundation/distributedhardware/distributed_input/distributedinput.gni")

ohos_shared_library("libdinput_utils") {
  include_dirs = [
    "${fwk_common_path}/log/include",
    "${fwk_utils_path}/include",
    "${fwk_utils_path}/include/log",
    "${utils_path}/include",
    "${common_path}/include",
  ]

  sources = [
    "src/dinput_utils_tool.cpp",
  ]

  defines = [
    "HI_LOG_ENABLE",
    "DH_LOG_TAG=\"dinpututils\"",
    "LOG_DOMAIN=0xD004100",
  ]

  deps = [
    "${fwk_utils_path}:distributedhardwareutils",
  ]

  external_deps = [
    "dsoftbus:softbus_client",
    "hiviewdfx_hilog_native:libhilog",
  ]

  subsystem_name = "distributedhardware"

  part_name = "distributed_input"
}
