# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import(
    "//foundation/distributedhardware/distributed_input/distributedinput.gni")

ohos_shared_library("libdinput_trans_base") {
  include_dirs = [
    "include",
    "${common_path}/include",
    "//commonlibrary/c_utils/base/include",
    "//utils/system/safwk/native/include",
    "${frameworks_path}/include",
    "${fwk_common_path}/log/include",
    "${fwk_common_path}/utils/include",
    "${fwk_utils_path}/include/log",
    "${fwk_utils_path}/include",
    "//third_party/json/include",
    "//foundation/communication/dsoftbus/interfaces/kits/transport",
    "${service_common}/include",
    "${dfx_utils_path}/include",
    "${utils_path}/include",
    "//third_party/libevdev/libevdev/",
    "${fwk_interfaces_path}/include",
    "${fwk_interfaces_path}/include/ipc",
    "//foundation/systemabilitymgr/safwk/interfaces/innerkits/safwk",
    "//foundation/communication/ipc/interfaces/innerkits/ipc_core/include",
    "//foundation/systemabilitymgr/samgr/interfaces/innerkits/samgr_proxy/include",
    "//foundation/distributedhardware/distributed_input/services/transportbase/include",
    "${distributedinput_path}/services/source/inputinject/include",
    "${distributedinput_path}/inputdevicehandler/include",
  ]

  sources = [
    "src/distributed_input_transport_base.cpp",
  ]

  defines = [
    "HI_LOG_ENABLE",
    "DH_LOG_TAG=\"distributedinputtransportbase\"",
    "LOG_DOMAIN=0xD004100",
  ]

  deps = [
    "${dfx_utils_path}:libdinput_dfx_utils",
    "${fwk_utils_path}:distributedhardwareutils",
    "${fwk_interfaces_path}:libdhfwk_sdk",
    "${utils_path}:libdinput_utils",
    "//third_party/libevdev:libevdev",
    "//base/notification/eventhandler/frameworks/eventhandler:libeventhandler",
    "//foundation/communication/dsoftbus/sdk:softbus_client",
    "//foundation/distributedhardware/distributed_input/services/source/inputinject:libdinput_inject",
    "//foundation/systemabilitymgr/samgr/interfaces/innerkits/samgr_proxy:samgr_proxy",
  ]

  external_deps = [
    "c_utils:utils",
    "hitrace_native:hitrace_meter",
  ]

  cflags_cc = [ "-DHILOG_ENABLE" ]

  subsystem_name = "distributedhardware"

  part_name = "distributed_input"
}
