# Copyright (c) 2021-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("//foundation/distributedhardware/distributed_input/distributedinput.gni")
module_out_path = "distributedinput_stander/system"

group("system") {
  testonly = true

  deps = [
    ":distributed_input_test",
  ]
}

## UnitTest distributed_input_test {{{
ohos_unittest("distributed_input_test") {
  module_out_path = module_out_path

  include_dirs = [
    "include",
    "${distributedinput_path}/interfaces/inner_kits/include",
    "${distributedinput_path}/interfaces/inner_kits/src",
    "${distributedinput_path}/interfaces/ipc/include",
    "${distributedinput_path}/interfaces/ipc/src",
    "${distributedinput_path}/services/source/sourcemanager/include",
    "${distributedinput_path}/services/sink/sinkmanager/include",
    "${distributedinput_path}/frameworks/include",
    "${distributedinput_path}/sourcehandler/include",
    "${distributedinput_path}/sinkhandler/include",
    "${distributedinput_path}/inputdevicehandler/include",
    "//utils/native/base/include",
    "//utils/system/safwk/native/include",
    "${service_common}/include",
    "${common_path}/include",
    "${fwk_common_path}/log/include",
    "${fwk_common_path}/utils/include",
    "${fwk_utils_path}/include/log",
    "${fwk_utils_path}/include",
    "//third_party/json/include",
  ]

  sources = [
    "src/distributed_input_test.cpp",
  ]

  cflags = [
    "-Wall",
    "-Werror",
    "-g3",
    "-Dprivate=public",
    "-Dprotected=public",
  ]

  defines = [
    "HI_LOG_ENABLE",
    "DH_LOG_TAG=\"distributedinpututtest\"",
    "LOG_DOMAIN=0xD004100",
  ]

  deps = [
    "${distributedinput_path}/interfaces/inner_kits:libdinput_sdk",
    "${distributedinput_path}/services/source/sourcemanager:libdinput_source",
    "${distributedinput_path}/services/source/inputinject:libdinput_inject",
    "${distributedinput_path}/services/source/transport:libdinput_source_trans",
    "${distributedinput_path}/services/sink/sinkmanager:libdinput_sink",
    "${distributedinput_path}/services/sink/inputcollector:libdinput_collector",
    "${distributedinput_path}/services/sink/transport:libdinput_sink_trans",
    "${distributedinput_path}/sourcehandler:libdinput_source_handler",
    "${distributedinput_path}/sinkhandler:libdinput_sink_handler",
    "${distributedinput_path}/inputdevicehandler:libdinput_handler",
    "//base/notification/eventhandler/frameworks/eventhandler:libeventhandler",
    "//utils/native/base:utils",
    "${fwk_utils_path}:distributedhardwareutils",
  ]

  external_deps = [
    "dsoftbus_standard:softbus_client",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "hiviewdfx_hilog_native:libhilog",
    "samgr_standard:samgr_proxy",
  ]

  cflags_cc = [ "-DHILOG_ENABLE" ]
}

## UnitTest distributed_input_test }}}