# Copyright (c) 2021-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/distributedhardware/distributed_input/distributedinput.gni")

ohos_shared_library("libdinput_sink") {
  include_dirs = [
    "include",
    "${frameworks_path}/include",
    "${innerkits_path}/include",
    "${innerkits_path}/src",
    "${ipc_path}/include",
    "${ipc_path}/src",
    "//utils/native/base/include",
    "//utils/system/safwk/native/include",
    "${common_path}/include",
    "${fwk_common_path}/log/include",
    "${fwk_common_path}/utils/include",
    "${fwk_utils_path}/include/log",
    "${fwk_utils_path}/include",
    "${service_common}/include",
    "${services_sink_path}/transport/include",
    "${services_sink_path}/inputcollector/include",
    "//third_party/json/include",
  ]

  sources = [
    "src/distributed_input_sink_manager.cpp",
    "src/distributed_input_sink_event_handler.cpp",
    "${ipc_path}/src/distributed_input_sink_stub.cpp",
    "${common_path}/include/white_list_util.cpp",
    "${ipc_path}/src/start_d_input_server_call_back_proxy.cpp",
    "${ipc_path}/src/start_d_input_server_call_back_stub.cpp",
  ]

  defines = [
    "HI_LOG_ENABLE",
    "DH_LOG_TAG=\"distributedinputmanagerkit\"",
    "LOG_DOMAIN=0xD004100",
  ]

  deps = [
    "//foundation/distributedhardware/distributed_input/interfaces/inner_kits:libdinput_sdk",
    "//foundation/bundlemanager/bundle_framework/interfaces/innerkits/libeventhandler:libeventhandler",
    "//utils/native/base:utils",
    "${fwk_utils_path}:distributedhardwareutils",
    "//foundation/distributedhardware/distributed_input/services/sink/transport:libdinput_sink_trans",
    "//foundation/distributedhardware/distributed_input/services/sink/inputcollector:libdinput_collector",
  ]

  external_deps = [
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "hiviewdfx_hilog_native:libhilog",
    "samgr_standard:samgr_proxy",
  ]

  cflags_cc = [ "-DHILOG_ENABLE" ]

  subsystem_name = "distributedhardware"

  part_name = "distributed_input"
}
