# Copyright (c) 2021-2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import(
    "//foundation/distributedhardware/distributed_input/distributedinput.gni")

ohos_shared_library("libdinput_sink") {
  include_dirs = [
    "include",
    "${frameworks_path}/include",
    "${innerkits_path}/include",
    "${innerkits_path}/src",
    "${ipc_path}/include",
    "${ipc_path}/src",
    "//commonlibrary/c_utils/base/include",
    "//utils/system/safwk/native/include",
    "${common_path}/include",
    "${fwk_common_path}/log/include",
    "${fwk_common_path}/utils/include",
    "${fwk_utils_path}/include/log",
    "${fwk_utils_path}/include",
    "${service_common}/include",
    "${services_sink_path}/transport/include",
    "${services_sink_path}/inputcollector/include",
    "//third_party/json/include",
    "${dfx_utils_path}/include",
    "${utils_path}/include",
    "${fwk_interfaces_path}/include",
    "${fwk_interfaces_path}/include/ipc",
    "//foundation/window/window_manager/interfaces/innerkits/dm",
    "//foundation/window/window_manager/utils/include/",
    "//foundation/systemabilitymgr/samgr/interfaces/innerkits/samgr_proxy/include",
    "//base/hiviewdfx/hisysevent/interfaces/native/innerkits/hisysevent/include",
    "//foundation/graphic/graphic_2d/rosen/modules/render_service_base/include",
    "//foundation/graphic/graphic_2d/interfaces/inner_api/surface",
    "//foundation/graphic/graphic_2d/interfaces/inner_api/common",
    "//drivers/peripheral/display/interfaces/include",
    "//drivers/peripheral/base",
    "//foundation/graphic/graphic_2d/utils/buffer_handle/export",
    "//third_party/libevdev/libevdev/"
  ]

  sources = [
    "${common_path}/include/white_list_util.cpp",
    "${ipc_path}/src/distributed_input_sink_stub.cpp",
    "src/distributed_input_sink_event_handler.cpp",
    "src/distributed_input_sink_manager.cpp",
  ]

  defines = [
    "HI_LOG_ENABLE",
    "DH_LOG_TAG=\"distributedinputmanagerkit\"",
    "LOG_DOMAIN=0xD004100",
  ]

  deps = [
    "${dfx_utils_path}:libdinput_dfx_utils",
    "${fwk_utils_path}:distributedhardwareutils",
    "${utils_path}:libdinput_utils",
    "//base/notification/eventhandler/frameworks/eventhandler:libeventhandler",
    "//foundation/distributedhardware/distributed_input/interfaces/inner_kits:libdinput_sdk",
    "//foundation/distributedhardware/distributed_input/services/sink/inputcollector:libdinput_collector",
    "//foundation/distributedhardware/distributed_input/services/sink/transport:libdinput_sink_trans",
    "${fwk_interfaces_path}:libdhfwk_sdk",
    "//foundation/window/window_manager/dm:libdm",
    "//third_party/libevdev:libevdev",
  ]

  external_deps = [
    "c_utils:utils",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
  ]

  cflags_cc = [ "-DHILOG_ENABLE" ]

  subsystem_name = "distributedhardware"

  part_name = "distributed_input"
}
