# Copyright (c) 2021-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/distributedhardware/distributed_input/distributedinput.gni")

ohos_shared_library("libdinput_sink_trans") {
  include_dirs = [
    "include",
    "${common_path}/include",
    "//utils/native/base/include",
    "//utils/system/safwk/native/include",
    "${fwk_common_path}/log/include",
    "${fwk_common_path}/utils/include",
    "${fwk_utils_path}/include/log",
    "${fwk_utils_path}/include",
    "//third_party/json/include",
    "//foundation/communication/dsoftbus/interfaces/kits/transport",
    "${service_common}/include",
  ]

  sources = [
    "src/distributed_input_sink_transport.cpp",
    "src/distributed_input_sink_switch.cpp"
  ]

  defines = [
    "HI_LOG_ENABLE",
    "DH_LOG_TAG=\"distributedinputsinktransport\"",
    "LOG_DOMAIN=0xD004100",
  ]

  deps = [
    "//foundation/bundlemanager/bundle_framework/interfaces/innerkits/libeventhandler:libeventhandler",
    "//foundation/distributedschedule/samgr/interfaces/innerkits/samgr_proxy:samgr_proxy",
    "//utils/native/base:utils",
    "${fwk_utils_path}:distributedhardwareutils",
    "//foundation/communication/dsoftbus/sdk:softbus_client",
  ]

  external_deps = [
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "hiviewdfx_hilog_native:libhilog",
    "samgr_standard:samgr_proxy",
  ]

  cflags_cc = [ "-DHILOG_ENABLE" ]

  subsystem_name = "distributedhardware"

  part_name = "distributed_input"

}
