# Copyright (c) 2021-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import(
    "//foundation/distributedhardware/distributed_input/distributedinput.gni")

ohos_shared_library("libdinput_inject") {
  include_dirs = [
    "include",
    "${common_path}/include",
    "${frameworks_path}/include",
    "//commonlibrary/c_utils/base/include",
    "//utils/system/safwk/native/include",
    "${distributedinput_path}/inputdevicehandler/include",
    "${fwk_common_path}/log/include",
    "${fwk_common_path}/utils/include",
    "${fwk_utils_path}/include/log",
    "${fwk_utils_path}/include",
    "${service_common}/include",
    "//third_party/json/include",
    "${dfx_utils_path}/include",
    "${utils_path}/include",
    "${fwk_interfaces_path}/include",
    "${fwk_interfaces_path}/include/ipc",
    "${distributedinput_path}/inputdevicehandler/include",
    "//foundation/systemabilitymgr/safwk/interfaces/innerkits/safwk",
    "//foundation/communication/ipc/interfaces/innerkits/ipc_core/include",
    "//foundation/systemabilitymgr/samgr/interfaces/innerkits/samgr_proxy/include",
  ]

  sources = [
    "${common_path}/include/input_hub.cpp",
    "src/distributed_input_inject.cpp",
    "src/distributed_input_node_manager.cpp",
    "src/virtual_device.cpp",
    "src/virtual_keyboard.cpp",
    "src/virtual_mouse.cpp",
    "src/virtual_touchpad.cpp",
    "src/virtual_touchscreen.cpp",
  ]

  defines = [
    "HI_LOG_ENABLE",
    "DH_LOG_TAG=\"distributedinputinjectkit\"",
    "LOG_DOMAIN=0xD004100",
  ]

  deps = [
    "${dfx_utils_path}:libdinput_dfx_utils",
    "${fwk_utils_path}:distributedhardwareutils",
    "${utils_path}:libdinput_utils",
    "//third_party/openssl:libcrypto_static",
  ]

  external_deps = [
    "c_utils:utils",
    "dsoftbus:softbus_client",
  ]

  cflags_cc = [ "-DHILOG_ENABLE" ]

  subsystem_name = "distributedhardware"

  part_name = "distributed_input"
}
